fix(dropdown): readable color in browser dark mode
fixes #193

--- a/app/javascript/components/Dropdown/Dropdown.scss
+++ b/app/javascript/components/Dropdown/Dropdown.scss
@@ -98,6 +98,7 @@
         margin-left: 0 !important;
         padding: $spacing-small $spacing-medium;
         background-color: #fff;
+        color: $dark-text-dark-light;
       }
     }
   }
